--- a/templates/aprendizaje.html
+++ b/templates/aprendizaje.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <!-- Anclaje con el Framework de BOOTSRAP-->
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
@@ -43,18 +44,18 @@
           </li>
         </ul>
       </nav>
+      <div
+        class="cover d-flex justify-content-center align-items-center flex-column"
+        style="background-image: url(https://cdn.glitch.com/94b1782f-485d-4be9-be6b-b48fefbcb22b%2Frsz_frank-vessia-9uprlljfkp8-unsplash_1.jpg?v=1589160069846);"
+      >
+        <h1>
+          Educación a distancia
+        </h1>
+      </div>
     </header>
-
-    <div
-      class="cover d-flex justify-content-center align-items-center flex-column"
-      style="background-image: url(https://cdn.glitch.com/94b1782f-485d-4be9-be6b-b48fefbcb22b%2Frsz_frank-vessia-9uprlljfkp8-unsplash_1.jpg?v=1589160069846);"
-    >
-      <h1>
-        Educación a distancia
-      </h1>
-    </div>
-    <!-- cuerpo de la seccion-->
+    <!-- cuerpo principal de la seccion-->
     <section class="indexcards">
+      <!-- introduccion de la seccion con imagen-->
       <p class="introsalud">
         <img
           src="https://cdn.glitch.com/94b1782f-485d-4be9-be6b-b48fefbcb22b%2Frsz_edu.jpg?v=1589226915200 "
@@ -68,7 +69,8 @@
       </p>
     </section>
     <div class="indexcards">
-      <u><h2>Consejos útiles</h2></u>
+      <u><h2>Consejos útiles</h2></u
+      ><!--lista decirpitiva -->
 
       <dl>
         <dt><u>Conocimiento de la herramienta</u></dt>
@@ -114,18 +116,12 @@
       </dl>
     </div>
 
+    <!--Pie de pagina-->
     <section class="footer">
-      <div>
-        <!--Pie de pagina-->
-        <p
-          style="color:cornsilk"
-          ;
-          background="https://cdn.glitch.com/94b1782f-485d-4be9-be6b-b48fefbcb22b%2Frsz_viktor-forgacs-fcdqdjum6b4-unsplash.jpg?v=1588799035102"
-        >
-          Para mas información no dudes en contactarte
-        </p>
-        <a href="/contacto" class=" volver btn btn-dark">Contacto</a>
-      </div>
+      <p style="color:cornsilk">
+        Para más información no dudes en contactarte
+      </p>
+      <a href="/contacto" class="btn btn-dark">Contacto</a>
     </section>
   </body>
 </html>
