--- a/templates/contacto.html
+++ b/templates/contacto.html
@@ -11,14 +11,16 @@
       integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
       crossorigin="anonymous"
     />
-    <!-- Anclaje al archivo de estilos-->
+    <!-- Anclaje con el Framework de BOOTSRAP-->
+
     <link
       rel="stylesheet"
       href="{{ url_for('static', filename='css/style.css') }}"
     />
+    <!-- Anclaje al archivo de estilos-->
   </head>
   <body class="fondo">
-    <!-- Barra de navegacion y portada de la sección-->
+    <!-- Barra de navegacion y portada-->
     <header>
       <nav
         class="navbar navbar-expand-lg navbar-light bg-light bg-dark navbar navbar-dark "
@@ -51,6 +53,7 @@
       </div>
     </header>
     <section>
+      <!-- Infromación de contacto-->
       <p class="textoconta">
         Trinidad González Padin: 2944581418<br />
 
