--- a/static/css/style.css
+++ b/static/css/style.css
@@ -4,6 +4,7 @@
 }
 body {
 margin: 0em;
+background-color: grey;
 }
 
 .fondo{
@@ -84,7 +85,7 @@ div.a{
   float: left 
  }
 
-/*pie de página */
+/*estilo plantilla contacto*/
  .textoconta{
   font-size: medium;
   text-align: left;
@@ -94,11 +95,12 @@ div.a{
   margin-left: 20px;
 
  }
+ /*pie de página */
  .footer{
   background-image:  url("https://cdn.glitch.com/94b1782f-485d-4be9-be6b-b48fefbcb22b%2Frsz_viktor-forgacs-fcdqdjum6b4-unsplash.jpg?v=1588799035102");
   background-color:silver;
   min-height: 10rem;
-  color: white;
+  color:cornsilk;
   font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
   font-size: 20px;
   font-style: itallic;
