--- a/templates/psico.html
+++ b/templates/psico.html
@@ -11,11 +11,13 @@
       integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
       crossorigin="anonymous"
     />
-    <!-- Anclaje al archivo de estilos-->
+    <!-- Anclaje con el Framework de BOOTSRAP-->
+
     <link
       rel="stylesheet"
       href="{{ url_for('static', filename='css/style.css') }}"
     />
+    <!-- Anclaje al archivo de estilos-->
   </head>
   <body class="fondo">
     <header>
@@ -43,19 +45,20 @@
           </li>
         </ul>
       </nav>
+      <div
+        class="cover d-flex justify-content-center align-items-center flex-column"
+        style="background-image: url(https://cdn.glitch.com/94b1782f-485d-4be9-be6b-b48fefbcb22b%2Frsz_anastasiia-chepinska-obmbhmrc3pw-unsplash.jpg?v=1589731177849);"
+      >
+        <h1>
+          Aprender en casa
+        </h1>
+      </div>
     </header>
-    <div
-      class="cover d-flex justify-content-center align-items-center flex-column"
-      style="background-image: url(https://cdn.glitch.com/94b1782f-485d-4be9-be6b-b48fefbcb22b%2Frsz_anastasiia-chepinska-obmbhmrc3pw-unsplash.jpg?v=1589731177849);"
-    >
-      <h1>
-        Aprender en casa
-      </h1>
-    </div>
-    <!-- cuerpo de la seccion-->
+    <!-- cuerpo de la sección-->
     <section class="indexcards">
       <p class="introsalud">
-        <u>Salud Mental</u>
+        <u>Salud Mental</u
+        ><!-- Introducción a la sección-->
         Frente a las condiciones de encierro debemos prioirzar el cudiado de
         nuestra salud mental.El intelecto es la mejor herramienta que podemos
         desarollar para el futuro.Por esto deberíamos aprovechar la cuarentena
@@ -68,9 +71,11 @@
       </p>
 
       <div class="container mt-5 mb-5">
+        <!-- Presentación de las 2 cartas con rutas -->
         <div class="row justify-content-start">
           <div class="col-12 col-sm-6 mt-2">
             <div class="card">
+              <!-- Carta-recreación-->
               <img
                 src="https://cdn.glitch.com/94b1782f-485d-4be9-be6b-b48fefbcb22b%2Frsz_steve-johnson-idmd4iw9xve-unsplash.jpg?v=1589159161091"
                 class="card-img card-img-top"
@@ -89,6 +94,7 @@
           </div>
           <div class="col-12 col-sm-6 mt-2">
             <div class="card">
+              <!-- Carta.EAD-->
               <img
                 src="https://cdn.glitch.com/94b1782f-485d-4be9-be6b-b48fefbcb22b%2Frsz_frank-vessia-9uprlljfkp8-unsplash_1.jpg?v=1589160069846"
                 class=" card-img card-img-top"
@@ -109,18 +115,12 @@
       </div>
     </section>
 
+    <!--Pie de pagina-->
     <section class="footer">
-      <div>
-        <!--Pie de pagina-->
-        <p
-          style="color:cornsilk"
-          ;
-          background="https://cdn.glitch.com/94b1782f-485d-4be9-be6b-b48fefbcb22b%2Frsz_viktor-forgacs-fcdqdjum6b4-unsplash.jpg?v=1588799035102"
-        >
-          Para mas información no dudes en contactarte
-        </p>
-        <a href="/contacto" class=" volver btn btn-dark">Contacto</a>
-      </div>
+      <p style="color:cornsilk">
+        Para más información no dudes en contactarte
+      </p>
+      <a href="/contacto" class="btn btn-dark">Contacto</a>
     </section>
   </body>
 </html>
