--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,15 +1,12 @@
 /* Estilo de barra de navegacion y fondo */
-.navbar{
-  background-color:snow;
-}
 body {
 margin: 0em;
 background-color: grey;
 }
 
-.fondo{
+/*.fondo{
   background-color: grey;
-}
+}*/
 /* Estilo aplicado a todas las portadas */
 .cover {
   height: 400px;
@@ -34,15 +31,12 @@ background-color: grey;
 
 
 .indexcards{
-  background-color: gray;
+  /*background-color: gray;*/
   margin-left: 5px;
   margin-top: 5px;
   margin-bottom: 2px;
 }
 
-div.a{
-  text-align: center;
-}
 /*estilo de las tarjetas */
 .card {
   border: 0 !important;
@@ -98,7 +92,6 @@ div.a{
  /*pie de página */
  .footer{
   background-image:  url("https://cdn.glitch.com/94b1782f-485d-4be9-be6b-b48fefbcb22b%2Frsz_viktor-forgacs-fcdqdjum6b4-unsplash.jpg?v=1588799035102");
-  background-color:silver;
   min-height: 10rem;
   color:cornsilk;
   font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
